force-app/main/default/objects/Opportunity/fields/LLC_BI__Branch__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and manually entered. It is used to lookup the financial institution&apos;s branch location that the opportunity is associated to.</description>
    <label>Branch</label>
    <referenceTo>LLC_BI__Branch__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>