force-app/main/default/objects/Opportunity/fields/LLC_BI__Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closed_Lost_Reason__c</fullName>
    <description>This picklist field is manually selected and optional. The picklist allows a user to select preset reasons for why the Opportunity was Closed Lost.</description>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor- Other</fullName>
            </value>
            <value>
                <fullName>Competitor- Price</fullName>
            </value>
            <value>
                <fullName>Competitor-Product/Service Functionality Gap</fullName>
            </value>
            <value>
                <fullName>Competitor- Product/Service Set Gap,</fullName>
            </value>
            <value>
                <fullName>Does not need services</fullName>
            </value>
            <value>
                <fullName>Lost Loan Relationship.</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product/Service Functionality Gap</fullName>
            </value>
            <value>
                <fullName>Product/Service Gap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>