force-app/main/default/objects/Opportunity/fields/LLC_BI__Closed_Lost_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closed_Lost_Reason_Notes__c</fullName>
    <description>This long text area is optional and manually entered. This field provides an area where a user can include additional information as to why an Opportunity was Closed Lost.</description>
    <label>Closed Lost Reason Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>