force-app/main/default/objects/Opportunity/fields/LLC_BI__CurrentGenerators__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CurrentGenerators__c</fullName>
    <description>--DEPRECATED--</description>
    <label>-D Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>