force-app/main/default/objects/Opportunity/fields/LLC_BI__Date_Loan_Closed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Date_Loan_Closed__c</fullName>
    <description>This field is automatically populated. This date field is set to the date at which the loan associated to this opportunity closed.</description>
    <label>Date Loan Closed</label>
    <type>Date</type>
</CustomField>