force-app/main/default/objects/Opportunity/fields/LLC_BI__Days_at_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Days_at_Current_Stage__c</fullName>
    <description>This field is automatically populated via formula and is used to specify the number of days the loan associated to the opportunity has been in its current stage.</description>
    <formula>TODAY() - LLC_BI__Start_Date_at_Current_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days at Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>