force-app/main/default/objects/Opportunity/fields/LLC_BI__DeliveryInstallationStatus__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DeliveryInstallationStatus__c</fullName>
    <description>This is a manually entered and optional field. This picklist field is used to specify the status of the product the opportunity is related to (eg. in progress, not yet started, completed). Workflow can be configured to automatically change the statuses when certain actions are completed by the user.  Generally this field would be used for Treasury Services products.</description>
    <label>Delivery/Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Yet to begin</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>