force-app/main/default/objects/Opportunity/fields/LLC_BI__Estimated_Gross_Fee_Discount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Estimated_Gross_Fee_Discount__c</fullName>
    <description>This field is manually entered and optional. This field allows users to specify a percent discount the opportunity qualifies for on the gross fee amount.</description>
    <label>Estimated Gross Fee Discount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>