force-app/main/default/objects/Opportunity/fields/LLC_BI__Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Existing_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually entered and optional. When the field it checked, it indicates the record belongs to an existing customer. Unchecked indicates this record is for a new customer.</description>
    <label>Existing Customer?</label>
    <type>Checkbox</type>
</CustomField>