force-app/main/default/objects/Opportunity/fields/LLC_BI__MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__MainCompetitors__c</fullName>
    <description>This text field is manually entered and optional. It is generally used to specify the main competitors for the financial institution closing this opportunity.</description>
    <label>Main Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>