force-app/main/default/objects/Opportunity/fields/LLC_BI__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__OrderNumber__c</fullName>
    <description>This text field is manually entered and optional. It is used to specify the financial institution&apos;s unique number ( order number) for this opportunity if it differs from the Salesforce record number automatically assigned to it upon creation.</description>
    <label>Order Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>