force-app/main/default/objects/Opportunity/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>This picklist field is manually selected and will filter based on product line and product type selections. This is a required field to be able to convert to nCino. The field is used to specify the opportunity&apos;s particular product  Use either the reference or the picklist field.</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Revolving Credit Card</fullName>
            </value>
            <value>
                <fullName>New Auto Loan</fullName>
            </value>
            <value>
                <fullName>Used Auto Loan</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Term Loan</fullName>
            </value>
            <value>
                <fullName>Syndication</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Commercial Checking Account</fullName>
            </value>
            <value>
                <fullName>Commercial Savings Account</fullName>
            </value>
            <value>
                <fullName>Preferred Checking Account</fullName>
            </value>
            <value>
                <fullName>Preferred Savings Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>