force-app/main/default/objects/Opportunity/fields/LLC_BI__Prospect_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prospect_Annual_Revenue__c</fullName>
    <description>This currency field is manually entered and optional, it can be used to specify the relationship&apos;s annual revenue. This relationship would be the one that is directly associated to the opportunity.</description>
    <label>Prospect Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>