force-app/main/default/objects/Opportunity/fields/LLC_BI__Prospect_Location_Scope__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Prospect_Location_Scope__c</fullName>
    <description>This picklist field is manually selected and optional. The field allows the user to specify the scope at which the location of the prospect (relationship) is marketed( eg. local, regional, national, etc.). The relationship would be the one that is directly associated to the opportunity.</description>
    <label>Prospect Location Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>