force-app/main/default/objects/Opportunity/fields/LLC_BI__RFP__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a manually selected and optional. This checkbox (if checked) is used to specify that the opportunity has had an RFP (request for proposal) associated to it.</description>
    <label>RFP?</label>
    <type>Checkbox</type>
</CustomField>