force-app/main/default/objects/Opportunity/fields/LLC_BI__Start_Date_at_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Date_at_Current_Stage__c</fullName>
    <description>This date field is automatically populated based on the date that the current stage was entered into. The field helps drive the actual days at current stage.</description>
    <label>Start Date at Current Stage</label>
    <type>Date</type>
</CustomField>