force-app/main/default/objects/Opportunity/fields/LLC_BI__Total_Deposits__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Deposits__c</fullName>
    <description>This field is automatically populated based on the total amount (currency) of the deposits of the account/ relationship associated to the opportunity. This information is mapped from the relationship if deposit level detail is available.</description>
    <label>Total Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>