force-app/main/default/objects/Opportunity/fields/LLC_BI__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TrackingNumber__c</fullName>
    <description>This text field is optional and manually entered. It is used to specify a unique tracking number for the opportunity--if the financial institution employs unique tracking numbers.</description>
    <label>Tracking Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>