force-app/main/default/objects/Opportunity/recordTypes/LLC_BI__Loan.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Loan</fullName>
    <active>false</active>
    <businessProcess>LLC_BI__Loan</businessProcess>
    <description>Select for a New Loan Opportunity</description>
    <label>Loan</label>
</RecordType>