force-app/main/default/objects/Opportunity/listViews/LLC_BI__AllOpportunities.listView-meta.xml
<ListView>
    <fullName>LLC_BI__AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>LLC_BI__Product_Line_Reference__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>