force-app/main/default/objects/Opportunity/listViews/LLC_BI__MyOpportunities.listView-meta.xml
<ListView>
    <fullName>LLC_BI__MyOpportunities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>