force-app/main/default/objects/Opportunity/listViews/LLC_BI__NewLastWeek.listView-meta.xml
<ListView>
    <fullName>LLC_BI__NewLastWeek</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>New Last Week</label>
</ListView>