force-app/main/default/objects/Opportunity/listViews/LLC_BI__Private.listView-meta.xml
<ListView>
    <fullName>LLC_BI__Private</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.PRIVATE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Private</label>
</ListView>